User registration and logging work in progress Handled register data validation and errors/4

--- a/src/main/resources/validation.properties
+++ b/src/main/resources/validation.properties
@@ -2,5 +2,6 @@ NotEmpty=This field is required.
 Size.registerForm.username=Please use between 3 and 50 characters.
 Duplicate.registerForm.username=Username taken. Please choose another username.
 Duplicate.registerForm.email=Email already in base. Please Create account on another email.
+NotEmail.registerForm.email=Please use proper email address.
 Size.registerForm.password=Please use between 8 and 30 characters.
 Diff.registerForm.confirmPassword=Passwords don't match.
