--- a/src/main/resources/validation.properties
+++ b/src/main/resources/validation.properties
@@ -5,3 +5,7 @@ Duplicate.registerForm.email=Email already in base. Please Create account on ano
 NotEmail.registerForm.email=Please use proper email address.
 Size.registerForm.password=Please use between 8 and 30 characters.
 Diff.registerForm.confirmPassword=Passwords don't match.
+
+NotEmail.loginForm.email=Please use proper email address.
+WrongEmailOrPassword.loginForm.email=Wrong email or password.
+WrongEmailOrPassword.loginForm.password=Wrong email or password.
