--- a/src/main/resources/validation.properties
+++ b/src/main/resources/validation.properties
@@ -1,11 +1,11 @@
-NotEmpty=This field is required.
+NotEmpty=All fields are required.
 Size.registerForm.username=Please use between 3 and 50 characters.
 Duplicate.registerForm.username=Username taken. Please choose another username.
 Duplicate.registerForm.email=Email already in base. Please Create account on another email.
-NotEmail.registerForm.email=Please use proper email address.
+NotEmail=Please use proper email address.
 Size.registerForm.password=Please use between 8 and 30 characters.
 Diff.registerForm.confirmPassword=Passwords don't match.
 
-NotEmail.loginForm.email=Please use proper email address.
-WrongEmailOrPassword.loginForm.email=Wrong email or password.
-WrongEmailOrPassword.loginForm.password=Wrong email or password.
+
+WrongEmailOrPassword=Wrong email or password.
+
