register/login/logout + navbar done and working /11

--- a/src/main/resources/validation.properties
+++ b/src/main/resources/validation.properties
@@ -1,6 +1,6 @@
 NotEmpty=All fields are required.
-Size.registerForm.username=Please use between 3 and 50 characters.
-Duplicate.registerForm.username=Username taken. Please choose another username.
+Size.registerForm.nickname=Please use between 3 and 50 characters.
+Duplicate.registerForm.nickname=Username taken. Please choose another username.
 Duplicate.registerForm.email=Email already in base. Please Create account on another email.
 NotEmail=Please use proper email address.
 Size.registerForm.password=Please use between 8 and 30 characters.
