events work in progress problems with login navbar disappearing buttons /1

--- a/src/main/resources/validation.properties
+++ b/src/main/resources/validation.properties
@@ -1,11 +1,15 @@
 NotEmpty=All fields are required.
-Size.registerForm.nickname=Please use between 3 and 50 characters.
 Duplicate.registerForm.nickname=Username taken. Please choose another username.
 Duplicate.registerForm.email=Email already in base. Please Create account on another email.
+Duplicate.eventForm.eventName=Event name already in our database. Please choose a different event name.
 NotEmail=Please use proper email address.
+Size.eventForm.eventName=Please use minimum 3 characters.
+Size.eventForm.eventDescription=Please use minimum 20 characters.
+Size.registerForm.nickname=Please use between 3 and 50 characters.
 Size.registerForm.password=Please use between 8 and 30 characters.
 Diff.registerForm.confirmPassword=Passwords don't match.
 
-
+Date.eventForm.eventEnd=Event already finished. Check event ending time.
+Date.eventForm.eventStart=Event cannot begin after it ended. Check event start and endig time.
 WrongEmailOrPassword=Wrong email or password.
 
