event details page done, minor bugfix
problems with login navbar disappearing buttons and sorting event list
/7

--- a/src/main/resources/validation.properties
+++ b/src/main/resources/validation.properties
@@ -10,6 +10,6 @@ Size.registerForm.password=Please use between 8 and 30 characters.
 Diff.registerForm.confirmPassword=Passwords don't match.
 
 Date.eventForm.eventEnd=Event already finished. Check event ending time.
-Date.eventForm.eventStart=Event cannot begin after it ended. Check event start and endig time.
+Date.eventForm.eventStart=Event cannot begin after it ended. Check event start and ending time.
 WrongEmailOrPassword=Wrong email or password.
 
