working comments functionality

--- a/src/main/resources/validation.properties
+++ b/src/main/resources/validation.properties
@@ -5,6 +5,7 @@ Duplicate.eventForm.eventName=Event name already in our database. Please choose 
 NotEmail=Please use proper email address.
 Size.eventForm.eventName=Please use minimum 3 characters.
 Size.eventForm.eventDescription=Please use minimum 20 characters.
+Size.commentForm.commentContents=Please use less than 500 characters.
 Size.registerForm.nickname=Please use between 3 and 50 characters.
 Size.registerForm.password=Please use between 8 and 30 characters.
 Diff.registerForm.confirmPassword=Passwords don't match.
